# ICRA2020_RG_SDDM

./: .gitignore  Dockerfile-RG_SDDM  LICENSE  README.md  index.html  rg_sddm.yml
astar_py/: CMakeLists.txt  README.md
astar_py/src/: astar_py.cpp  gridutils_py.cpp
astar_py/test/: test_astar.py
log/: dense_rgs_ellipsePd_diag_1_4.pkl  ec_ballPd_diag_1_1.pkl  ec_ellipsePd_diag_1_4.pkl  sparse_ballPd_diag_1_1.pkl  sparse_ellipsePd_diag_1_4.pkl
mesh/: dense_env.stl  dense_obs.stl  star.stl
src/: gov_ellipse.py  gov_log_viewer.py  gov_map.py  lti_solver.py  main_cooridor_comp.py  main_dense_unknown.py  main_dense_video2D.py  main_dense_video3D.py  main_norm_comp_align_wall.py  main_norm_comp_gif.py  main_sparse_known.py  main_traj_bound_sddm.py  my_utils.py  opt_solver.py  rgs_dense_unknown.py  rgs_mapping.py  rgs_sparse_known.py  traj_est.py
